Closed
Bug 257378
Opened 21 years ago
Closed 21 years ago
L10n teams should be able to translate reply header "on date" through *.properties file.
Categories
(Thunderbird :: Preferences, defect)
Thunderbird
Preferences
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.9
People
(Reporter: gorky, Assigned: mscott)
References
Details
Attachments
(1 file)
3.37 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040802 Firefox/0.9.1+ (Pitreck)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040802 Firefox/0.9.1+ (Pitreck)
Thunderbird has one language string that can't be translated in other way, than
through edit of (or creating new) *.js file. The string is reply header "on
date", which right now we are able to translate only through modification of
value of pref("mailnews.reply_header_ondate". L10n teams should be able to
translate this, just like the other reply headers, through
composeMsgs.properties file.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Updated•21 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Thunderbird0.9
Assignee | ||
Comment 1•21 years ago
|
||
note to self, see:
http://lxr.mozilla.org/seamonkey/search?string=mailnews.reply_header_authorw
Assignee | ||
Comment 2•21 years ago
|
||
Assignee | ||
Updated•21 years ago
|
Attachment #162232 -
Flags: superreview?(bienvenu)
Updated•21 years ago
|
Attachment #162232 -
Flags: superreview?(bienvenu) → superreview+
Assignee | ||
Comment 3•21 years ago
|
||
fixed branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 4•21 years ago
|
||
Comment on attachment 162232 [details] [diff] [review]
the fix
> mailnews.reply_header_authorwrote=%s wrote
>
> ## reply header in composeMsg
>+## <author> wrote:
>+mailnews.reply_header_authorwrote=%s wrote
This section is duplicated! The mail/ diff was correct.
You need to log in
before you can comment on or make changes to this bug.
Description
•