Bug #257378 --> L10n teams should be able to translate reply header "on date" through *.properties file instead of using a hard coded string in mailnews.js

sr=bienvenu